--- a/index.html
+++ b/index.html
@@ -1,146 +1,365 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>STEP Tracker — Guardian Dashboard</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>STEP Tracker — Guardian Dashboard</title>
 
-<!-- Leaflet CSS -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 
-<style>
-:root {
-  --bg: #0d0d0d;
-  --card: #141414;
-  --accent: #FFD400;
-  --text: #eaeaea;
-  --muted: #aaa;
-  --danger: #ff4d4d;
-  --success: #4CAF50;
-}
-* { box-sizing: border-box; margin:0; padding:0; font-family:'Poppins', sans-serif; }
-body { background: var(--bg); color: var(--text); display:flex; flex-direction:column; height:100vh; overflow:hidden; }
-header { background: linear-gradient(90deg,#000,#111,#222); padding:18px 30px; border-bottom:2px solid var(--accent); display:flex; justify-content:space-between; font-weight:700; color:var(--accent); box-shadow:0 0 12px rgba(255,212,0,0.3); }
-main { display:grid; grid-template-columns:2fr 1fr; height:100%; overflow:hidden; }
-#map { width:100%; height:100%; z-index:1; }
-.panel { background:var(--card); padding:25px; display:flex; flex-direction:column; gap:18px; border-left:2px solid #222; box-shadow:inset 0 0 12px rgba(255,212,0,0.05); overflow-y:auto; }
-.title { font-size:22px; color:var(--accent); font-weight:700; text-align:center; }
-.info-box { background:#111; border:1px solid #222; border-radius:10px; padding:12px 15px; display:flex; justify-content:space-between; align-items:center; font-size:16px; }
-.info-box span.value { color: var(--accent); font-weight:600; }
-.status-pill { background:var(--success); color:#000; font-weight:700; padding:10px 14px; border-radius:8px; text-align:center; font-size:15px; }
-.alert { background:var(--danger); color:#000; font-weight:700; padding:10px; border-radius:8px; text-align:center; font-size:15px; animation:blink 1.2s infinite alternate; }
-@keyframes blink { 0%{opacity:1;} 100%{opacity:0.6;} }
-.btn-row { display:flex; gap:10px; justify-content:space-between; margin-top:auto; }
-button { flex:1; border:none; background:var(--accent); color:#000; font-weight:700; border-radius:10px; padding:12px; cursor:pointer; font-size:16px; transition: all 0.2s ease; }
-button:hover { background:#ffe44d; transform:scale(1.03); }
-button:focus { outline:2px solid var(--accent); outline-offset:2px; }
-footer { text-align:center; padding:8px; font-size:13px; color:var(--muted); border-top:1px solid #222; }
-@media(max-width:900px){ main {grid-template-columns:1fr; grid-template-rows:1fr 0.9fr;} .panel{border-left:none;border-top:2px solid #222;} }
-.leaflet-marker-icon { transition: transform 0.5s ease; }
-</style>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
+
+  <style>
+    :root {
+      --bg: #0d0d0d;
+      --card: #141414;
+      --accent: #FFD400;
+      --text: #eaeaea;
+      --muted: #aaa;
+      --danger: #ff4d4d;
+      --success: #4CAF50;
+    }
+
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    header {
+      background: linear-gradient(90deg, #000, #111, #222);
+      padding: 18px 30px;
+      border-bottom: 2px solid var(--accent);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: var(--accent);
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      box-shadow: 0 0 12px rgba(255, 212, 0, 0.3);
+    }
+
+    main {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    #map {
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+
+    .panel {
+      background: var(--card);
+      padding: 25px;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+      border-left: 2px solid #222;
+      box-shadow: inset 0 0 12px rgba(255, 212, 0, 0.05);
+      overflow-y: auto;
+    }
+
+    .title {
+      font-size: 22px;
+      color: var(--accent);
+      font-weight: 700;
+      text-align: center;
+    }
+
+    .info-box {
+      background: #111;
+      border: 1px solid #222;
+      border-radius: 10px;
+      padding: 12px 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 16px;
+    }
+
+    .info-box span.value {
+      color: var(--accent);
+      font-weight: 600;
+    }
+
+    .status-pill {
+      background: var(--success);
+      color: #000;
+      font-weight: 700;
+      padding: 10px 14px;
+      border-radius: 8px;
+      text-align: center;
+      font-size: 15px;
+    }
+
+    .alert {
+      background: var(--danger);
+      color: #000;
+      font-weight: 700;
+      padding: 10px;
+      border-radius: 8px;
+      text-align: center;
+      font-size: 15px;
+      animation: blink 1.2s infinite alternate;
+    }
+
+    @keyframes blink {
+      0% { opacity: 1; }
+      100% { opacity: 0.6; }
+    }
+
+    .btn-row {
+      display: flex;
+      gap: 10px;
+      justify-content: space-between;
+      margin-top: auto;
+    }
+
+    button {
+      flex: 1;
+      border: none;
+      background: var(--accent);
+      color: #000;
+      font-weight: 700;
+      border-radius: 10px;
+      padding: 12px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: all 0.2s ease;
+    }
+
+    button:hover {
+      background: #ffe44d;
+      transform: scale(1.03);
+    }
+
+    button:focus {
+      outline: 2px solid var(--accent);
+      outline-offset: 2px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 8px;
+      font-size: 13px;
+      color: var(--muted);
+      border-top: 1px solid #222;
+    }
+
+    @media(max-width: 900px) {
+      main { grid-template-columns: 1fr; grid-template-rows: 1fr 0.9fr; }
+      .panel { border-left: none; border-top: 2px solid #222; }
+    }
+
+    /* Accessibility improvements */
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border: 0;
+    }
+
+    /* Smooth animations for marker movement */
+    .leaflet-marker-icon {
+      transition: transform 0.5s ease;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <div>👟 STEP Tracker — Guardian</div>
+    <div id="connectStatus" class="status-pill" aria-live="polite">Connecting...</div>
+  </header>
 
-<header>
-  <div>👟 STEP Tracker — Guardian</div>
-  <div id="connectStatus" class="status-pill" aria-live="polite">Connecting...</div>
-</header>
+  <main>
+    <div id="map" role="application" aria-label="Interactive map showing STEP device location"></div>
 
-<main>
-  <div id="map" role="application" aria-label="Interactive map showing STEP device location"></div>
+    <div class="panel">
+      <div class="title">Device Information</div>
 
-  <div class="panel">
-    <div class="title">Device Information</div>
-    <div class="info-box"><span>Last Location:</span><span class="value" id="latlng">— , —</span></div>
-    <div class="info-box"><span>Street:</span><span class="value" id="street">—</span></div>
-    <div class="info-box"><span>Last Update:</span><span class="value" id="lastUpdate">—</span></div>
-    <div class="info-box"><span>Distance to Obstacle:</span><span class="value" id="distance">— cm</span></div>
-    <div class="info-box"><span>Battery Level:</span><span class="value" id="battery">— %</span></div>
-    <div id="alerts" class="status-pill">No alerts</div>
+      <div class="info-box"><span>Last Location:</span><span class="value" id="latlng" aria-live="polite">— , —</span></div>
+      <div class="info-box"><span>Street:</span><span class="value" id="street" aria-live="polite">—</span></div>
+      <div class="info-box"><span>Last Update:</span><span class="value" id="lastUpdate" aria-live="polite">—</span></div>
+      <div class="info-box"><span>Distance to Obstacle:</span><span class="value" id="distance" aria-live="polite">— cm</span></div>
+      <div class="info-box"><span>Battery Level:</span><span class="value" id="battery" aria-live="polite">— %</span></div>
+      <div id="alerts" class="ok status-pill" aria-live="assertive">No alerts</div>
 
-    <div class="btn-row">
-      <button id="playSound">🔔 Play Sound</button>
-      <button id="centerBtn">📍 Center Map</button>
+      <div class="btn-row">
+        <button id="playSound" aria-label="Play sound to alert the device">🔔 Play Sound</button>
+        <button id="centerBtn" aria-label="Center map on device location">📍 Center Map</button>
+      </div>
     </div>
-  </div>
-</main>
+  </main>
 
-<footer>© 2025 STEP Smart Blind Shoe | Real-time Tracking</footer>
+  <footer>© 2025 STEP Smart Blind Shoe | Designed for accessibility and real-time tracking</footer>
 
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- Scripts -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-<script>
-// Firebase config
-const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "step-gps-tracker.firebaseapp.com",
-  databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "step-gps-tracker",
-  storageBucket: "step-gps-tracker.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
+  <script>
+  // --- Firebase Configuration ---
+  const firebaseConfig = {
+    apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
+    authDomain: "step-gps-tracker.firebaseapp.com",
+    databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "step-gps-tracker",
+    storageBucket: "step-gps-tracker.firebasestorage.app",
+    messagingSenderId: "637274580153",
+    appId: "1:637274580153:web:7566f774dbf5ea4380a768"
+  };
 
-// Map setup
-const defaultLat=14.3, defaultLng=121.4;
-const map = L.map('map').setView([defaultLat,defaultLng],16);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-// Marker for STEP device
-const blindIcon = L.divIcon({className:'custom-icon', html:'<div style="width:40px;height:40px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;"><span style="font-size:24px;">🧑‍🦯</span></div>', iconSize:[40,40], iconAnchor:[20,20]});
-let marker = L.marker([defaultLat,defaultLng],{icon:blindIcon}).addTo(map).bindPopup("STEP Device");
-let pathCoords = [];
-let pathLine = L.polyline(pathCoords,{color:'#FFD400',weight:4,opacity:0.8,dashArray:'10,10'}).addTo(map);
+  // --- Leaflet Map ---
+  // Updated default to approximate Lumbang, Laguna (adjust if needed)
+  const defaultLat = 14.3, defaultLng = 121.4;
+  const map = L.map('map', { zoomControl: true, attributionControl: true }).setView([defaultLat, defaultLng], 16);
 
-// Elements
-const latlngEl=document.getElementById('latlng');
-const streetEl=document.getElementById('street');
-const lastUpdateEl=document.getElementById('lastUpdate');
-const distanceEl=document.getElementById('distance');
-const batteryEl=document.getElementById('battery');
-const alertsEl=document.getElementById('alerts');
-const connectStatusEl=document.getElementById('connectStatus');
-const centerBtn=document.getElementById('centerBtn');
-const playSoundBtn=document.getElementById('playSound');
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '© OpenStreetMap contributors'
+  }).addTo(map);
 
-const beep = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
-centerBtn.addEventListener('click',()=>{map.panTo(marker.getLatLng()); map.setZoom(18);});
-playSoundBtn.addEventListener('click',()=> beep.play());
+  // --- Icon for visually impaired person (person with white cane) ---
+  const blindIcon = L.divIcon({
+    className: 'custom-icon',
+    html: '<div style="width:40px;height:40px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;box-shadow:0 0 15px #FFD400;animation:pulse 2s infinite;"><span style="font-size:24px;" role="img" aria-label="Person with white cane">🧑‍🦯</span></div>',
+    iconSize: [40,40],
+    iconAnchor: [20,20]
+  });
 
-// Reverse geocoding
-async function getStreet(lat,lng){
-  try {
-    const res=await fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lng}&format=json&zoom=18&addressdetails=1`,{headers:{'User-Agent':'STEP Tracker'}});
-    const data=await res.json();
-    return data.address? (data.address.road||data.display_name||'Unknown'):'Unknown';
-  } catch(e){ return 'Unknown'; }
-}
+  let marker = L.marker([defaultLat, defaultLng], {icon: blindIcon}).addTo(map).bindPopup('STEP Device Location');
 
-// Firebase listener
-db.ref('shoe').on('value',async snap=>{
-  const data = snap.val();
-  if(!data){ connectStatusEl.textContent='No Data'; connectStatusEl.style.background='#555'; return; }
-  connectStatusEl.textContent='Online'; connectStatusEl.style.background='var(--success)';
+  // --- Path tracking with smooth line ---
+  let pathCoords = [];
+  let pathLine = L.polyline(pathCoords, {color:'#FFD400', weight:4, opacity:0.8, dashArray: '10, 10'}).addTo(map);
 
-  const lat=data.latitude||defaultLat;
-  const lng=data.longitude||defaultLng;
+  // --- Elements ---
+  const latlngEl = document.getElementById('latlng');
+  const streetEl = document.getElementById('street');
+  const lastUpdateEl = document.getElementById('lastUpdate');
+  const distanceEl = document.getElementById('distance');
+  const batteryEl = document.getElementById('battery');
+  const alertsEl = document.getElementById('alerts');
+  const connectStatusEl = document.getElementById('connectStatus');
+  const centerBtn = document.getElementById('centerBtn');
+  const playSoundBtn = document.getElementById('playSound');
 
-  // Marker movement
-  marker.setLatLng([lat,lng]);
-  map.panTo([lat,lng]);
-  pathCoords.push([lat,lng]); if(pathCoords.length>200) pathCoords.shift();
-  pathLine.setLatLngs(pathCoords);
+  const beep = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
 
-  // Info panel
-  latlngEl.textContent=`${lat.toFixed(6)}, ${lng.toFixed(6)}`;
-  lastUpdateEl.textContent=new Date().toLocaleString('en-PH',{hour12:false});
-  distanceEl.textContent=data.distance? `${data.distance.toFixed(1)} cm`:'— cm';
-  if(data.battery){ let percent=Math.round((data.battery-3.0)/(4.2-3.0)*100); percent=Math.max(0,Math.min(100,percent)); batteryEl.textContent=`${percent}%`; batteryEl.style.color=percent<20?'var(--danger)':'var(--accent)'; }
-  streetEl.textContent=await getStreet(lat,lng);
+  centerBtn.addEventListener('click', ()=> {
+    map.panTo(marker.getLatLng());
+    map.setZoom(18); // Zoom in closer for better view
+  });
+  playSoundBtn.addEventListener('click', ()=> beep.play());
 
-  if(data.sos){ alertsEl.textContent="⚠️ SOS — Send Help!"; alertsEl.className
+  // --- Reverse Geocoding with better error handling ---
+  async function getStreet(lat, lng){
+    try {
+      const url = `https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lng}&format=json&zoom=18&addressdetails=1`;
+      const res = await fetch(url, { headers: {'User-Agent':'STEP Tracker'} });
+      if (!res.ok) throw new Error('Geocoding failed');
+      const data = await res.json();
+      console.log('Geocoding data:', data); // Debugging: Check console for address details
+      return data.address ? (data.address.road || data.display_name || 'Unknown') : 'Unknown';
+    } catch(e){ 
+      console.error('Geocoding error:', e); // Debugging
+      return 'Unknown'; 
+    }
+  }
+
+  // --- Firebase listener ---
+  const shoeRef = db.ref('shoe');
+  shoeRef.on('value', async snap => {
+    const data = snap.val();
+    console.log('Firebase data:', data); // Debugging: Check console for received data
+
+    if(!data){ 
+      connectStatusEl.textContent='No Data'; 
+      connectStatusEl.style.background= '#555'; 
+      alert('No data received from device. Check Firebase or device connection.'); // Alert for debugging
+      return; 
+    }
+
+    connectStatusEl.textContent='Online';
+    connectStatusEl.style.background= 'var(--success)';
+
+    const lat = data.latitude || defaultLat;
+    const lng = data.longitude || defaultLng;
+
+    console.log('Using coordinates:', lat, lng); // Debugging
+
+    // Smooth marker movement
+    marker.setLatLng([lat,lng]);
+    map.panTo([lat,lng], {animate: true, duration: 1});
+
+    // Add to path and limit to last 200 points for performance
+    pathCoords.push([lat,lng]);
+    if(pathCoords.length > 200) pathCoords.shift();
+    pathLine.setLatLngs(pathCoords);
+
+    // Update info panel with live updates
+    latlngEl.textContent = `${lat.toFixed(6)}, ${lng.toFixed(6)}`;
+    lastUpdateEl.textContent = new Date().toLocaleString('en-PH',{hour12:false});
+    distanceEl.textContent = data.distance ? `${data.distance.toFixed(1)} cm` : '— cm';
+
+    // Battery %
+    if(data.battery){
+      let percent = Math.round((data.battery - 3.0)/(4.2-3.0)*100);
+      percent = Math.max(0, Math.min(100, percent));
+      batteryEl.textContent = `${percent}%`;
+      if(percent < 20) {
+        batteryEl.style.color = 'var(--danger)';
+      } else {
+        batteryEl.style.color = 'var(--accent)';
+      }
+    }
+
+    // Street name
+    streetEl.textContent = await getStreet(lat, lng);
+
+    // Alerts with sound and visual feedback
+    if(data.sos){
+      alertsEl.textContent = "⚠️ SOS — Send Help!";
+      alertsEl.className = "alert";
+      beep.play();
+      // Optional: Vibrate if supported
+      if(navigator.vibrate) navigator.vibrate(500);
+    } else {
+      alertsEl.textContent = "✅ No Alerts";
+      alertsEl.className = "status-pill";
+    }
+  });
+
+  // --- Additional features for better UX ---
+  // Auto-center on load
+  setTimeout(() => map.invalidateSize(), 100);
+
+  // Keyboard navigation for map
+  map.on('keydown', function(e) {
+    if(e.originalEvent.key === 'c') {
+      map.panTo(marker.getLatLng());
+    }
+  });
+  </script>
+</body>
+</html>
