--- a/index.html
+++ b/index.html
@@ -13,40 +13,137 @@
 
 <style>
 :root {
-  --bg:#0d0d0d;
-  --card:#141414;
-  --accent:#FFD400;
-  --text:#eaeaea;
-  --muted:#aaa;
-  --danger:#ff4d4d;
-  --warning:#FFD500;
-  --safe:#4CAF50;
+  --bg: #0d0d0d;
+  --card: #141414;
+  --accent: #FFD400;
+  --text: #eaeaea;
+  --muted: #aaa;
+  --danger: #ff4d4d;
+  --success: #4CAF50;
+  --warning: #FFC107;
 }
 
-* { box-sizing:border-box; margin:0; padding:0; font-family:'Poppins',sans-serif; }
+* { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
 
-body { background:var(--bg); color:var(--text); display:flex; flex-direction:column; height:100vh; overflow:hidden; }
-header { background:linear-gradient(90deg,#000,#111,#222); padding:18px 30px; border-bottom:2px solid var(--accent);
-  display:flex; justify-content:space-between; align-items:center; color:var(--accent); font-weight:700; box-shadow:0 0 12px rgba(255,212,0,0.3); }
-main { display:grid; grid-template-columns:2fr 1fr; height:100%; overflow:hidden; }
-#map { width:100%; height:100%; z-index:1; }
-.panel { background:var(--card); padding:25px; display:flex; flex-direction:column; gap:18px; border-left:2px solid #222; overflow-y:auto; }
-.title { font-size:22px; color:var(--accent); font-weight:700; text-align:center; }
-.info-box { background:#111; border:1px solid #222; border-radius:10px; padding:12px 15px; display:flex; justify-content:space-between; align-items:center; font-size:16px; }
-.info-box span.value { color:var(--accent); font-weight:600; }
-.status-pill { background:var(--safe); color:#000; font-weight:700; padding:10px 14px; border-radius:8px; text-align:center; font-size:15px; }
-.alert { font-weight:700; padding:10px; border-radius:8px; text-align:center; font-size:15px; animation:blink 1.2s infinite alternate; }
-.alert.safe { background:var(--safe); color:#000; animation:none; }
-.alert.warning { background:var(--warning); color:#000; }
-.alert.danger { background:var(--danger); color:#000; }
-@keyframes blink { 0%{opacity:1;} 100%{opacity:0.6;} }
+body {
+  background: var(--bg);
+  color: var(--text);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+}
 
-.btn-row { display:flex; gap:10px; justify-content:space-between; margin-top:auto; }
-button { flex:1; border:none; background:var(--accent); color:#000; font-weight:700; border-radius:10px; padding:12px; cursor:pointer; font-size:16px; transition:all 0.2s ease; }
+header {
+  background: linear-gradient(90deg, #000, #111, #222);
+  padding: 18px 30px;
+  border-bottom: 2px solid var(--accent);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--accent);
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  box-shadow: 0 0 12px rgba(255, 212, 0, 0.3);
+}
+
+main {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  height: 100%;
+  overflow: hidden;
+}
+
+#map { width: 100%; height: 100%; z-index:1; }
+
+.panel {
+  background: var(--card);
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  border-left: 2px solid #222;
+  box-shadow: inset 0 0 12px rgba(255, 212, 0, 0.05);
+  overflow-y: auto;
+}
+
+.title {
+  font-size: 22px;
+  color: var(--accent);
+  font-weight: 700;
+  text-align: center;
+}
+
+.info-box {
+  background: #111;
+  border: 1px solid #222;
+  border-radius: 10px;
+  padding: 12px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+}
+
+.info-box span.value { color: var(--accent); font-weight: 600; }
+
+.status-pill {
+  background: var(--success);
+  color: #000;
+  font-weight: 700;
+  padding: 10px 14px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.alert {
+  background: var(--danger);
+  color: #000;
+  font-weight: 700;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 15px;
+  animation: blink 1.2s infinite alternate;
+}
+
+.warning {
+  background: var(--warning);
+  color: #000;
+  font-weight: 700;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 15px;
+  animation: blink 1.2s infinite alternate;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  100% { opacity: 0.6; }
+}
+
+.btn-row { display:flex; gap:10px; justify-content: space-between; margin-top:auto; }
+
+button {
+  flex:1; border:none; background: var(--accent); color:#000; font-weight:700;
+  border-radius:10px; padding:12px; cursor:pointer; font-size:16px;
+  transition: all 0.2s ease;
+}
 button:hover { background:#ffe44d; transform:scale(1.03); }
-footer { text-align:center; padding:8px; font-size:13px; color:var(--muted); border-top:1px solid #222; }
-@media(max-width:900px){ main{grid-template-columns:1fr; grid-template-rows:1fr 0.9fr;} .panel{border-left:none; border-top:2px solid #222;} }
-.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;}
+button:focus { outline: 2px solid var(--accent); outline-offset:2px; }
+
+footer {
+  text-align:center; padding:8px; font-size:13px; color:var(--muted);
+  border-top:1px solid #222;
+}
+
+@media(max-width:900px){
+  main{ grid-template-columns:1fr; grid-template-rows:1fr 0.9fr; }
+  .panel{ border-left:none; border-top:2px solid #222; }
+}
+
 .leaflet-marker-icon { transition: transform 0.5s ease; }
 </style>
 </head>
@@ -57,28 +154,31 @@ footer { text-align:center; padding:8px; font-size:13px; color:var(--muted); bor
 </header>
 
 <main>
-  <div id="map" role="application" aria-label="Map showing STEP device location"></div>
+  <div id="map" role="application" aria-label="Interactive map showing STEP device location"></div>
 
   <div class="panel">
     <div class="title">Device Information</div>
+
     <div class="info-box"><span>Last Location:</span><span class="value" id="latlng" aria-live="polite">— , —</span></div>
+    <div class="info-box"><span>Last Update:</span><span class="value" id="lastUpdate" aria-live="polite">—</span></div>
     <div class="info-box"><span>Distance to Obstacle:</span><span class="value" id="distance" aria-live="polite">— cm</span></div>
-    <div id="alerts" class="status-pill alert safe" aria-live="assertive">No Alerts</div>
+    <div id="alerts" class="status-pill" aria-live="assertive">No alerts</div>
+
     <div class="btn-row">
       <button id="centerBtn" aria-label="Center map on device location">📍 Center Map</button>
     </div>
   </div>
 </main>
 
-<footer>© 2025 S.T.E.P | Guardian Monitoring Dashboard</footer>
+<footer>© 2025 S.T.E.P Guardian Monitoring | Realtime Tracking</footer>
 
-<!-- Firebase & Leaflet -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <script>
-// --- Firebase config ---
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
   authDomain: "step-gps-tracker.firebaseapp.com",
@@ -91,68 +191,81 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-// --- Leaflet Map ---
-const defaultLat=14.3, defaultLng=121.4;
+// Map init
+const defaultLat = 14.3, defaultLng = 121.4;
 const map = L.map('map').setView([defaultLat, defaultLng],16);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19, attribution:'© OpenStreetMap contributors'}).addTo(map);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+  maxZoom:19, attribution:'© OpenStreetMap contributors'
+}).addTo(map);
 
-// Marker icon
+// Marker
 const blindIcon = L.divIcon({
   className:'custom-icon',
   html:'<div style="width:40px;height:40px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;box-shadow:0 0 15px #FFD400;"><span style="font-size:24px;">🧑‍🦯</span></div>',
   iconSize:[40,40], iconAnchor:[20,20]
 });
-let marker = L.marker([defaultLat, defaultLng],{icon:blindIcon}).addTo(map).bindPopup('STEP Device Location');
+let marker = L.marker([defaultLat,defaultLng],{icon:blindIcon}).addTo(map).bindPopup('STEP Device Location');
 
-// Path line
+// Path
 let pathCoords = [];
-let pathLine = L.polyline(pathCoords, {color:'#FFD400', weight:4, opacity:0.8, dashArray:'10,10'}).addTo(map);
+let pathLine = L.polyline(pathCoords,{color:'#FFD400', weight:4, opacity:0.8, dashArray:'10,10'}).addTo(map);
 
 // Elements
 const latlngEl = document.getElementById('latlng');
+const lastUpdateEl = document.getElementById('lastUpdate');
 const distanceEl = document.getElementById('distance');
 const alertsEl = document.getElementById('alerts');
 const connectStatusEl = document.getElementById('connectStatus');
 const centerBtn = document.getElementById('centerBtn');
 
-centerBtn.addEventListener('click', ()=>{ map.panTo(marker.getLatLng()); map.setZoom(18); });
+centerBtn.addEventListener('click',()=> {
+  map.panTo(marker.getLatLng());
+  map.setZoom(18);
+});
 
-// --- Firebase listener ---
+// Firebase listener
 const shoeRef = db.ref('shoe');
 shoeRef.on('value', snap=>{
   const data = snap.val();
-  if(!data){
-    connectStatusEl.textContent='No Data'; connectStatusEl.style.background='#555'; return;
+  if(!data){ 
+    connectStatusEl.textContent='No Data'; 
+    connectStatusEl.style.background='#555';
+    return;
   }
 
-  connectStatusEl.textContent='Online'; connectStatusEl.style.background='var(--safe)';
+  connectStatusEl.textContent='Online';
+  connectStatusEl.style.background='var(--success)';
 
-  const lat = data.latitude||defaultLat;
-  const lng = data.longitude||defaultLng;
+  const lat = data.latitude || defaultLat;
+  const lng = data.longitude || defaultLng;
+
+  // Smooth marker movement
   marker.setLatLng([lat,lng]);
-  map.panTo([lat,lng],{animate:true, duration:1});
+  map.panTo([lat,lng],{animate:true,duration:0.5});
 
-  // Path tracking
   pathCoords.push([lat,lng]);
   if(pathCoords.length>200) pathCoords.shift();
   pathLine.setLatLngs(pathCoords);
 
-  // Update info
-  latlngEl.textContent=`${lat.toFixed(6)}, ${lng.toFixed(6)}`;
+  latlngEl.textContent = `${lat.toFixed(6)}, ${lng.toFixed(6)}`;
+  lastUpdateEl.textContent = new Date().toLocaleString('en-PH',{hour12:false});
   distanceEl.textContent = data.distance ? `${data.distance.toFixed(1)} cm` : '— cm';
 
-  // Alerts based on distance
-  if(data.distance > 150){
+  // Alerts logic (same thresholds as ESP32)
+  if(data.distance>150){
     alertsEl.textContent="✅ Safe";
-    alertsEl.className="status-pill alert safe";
-  } else if(data.distance > 30){
+    alertsEl.className="status-pill";
+  } else if(data.distance>30){
     alertsEl.textContent="🟡 Mild Warning";
-    alertsEl.className="status-pill alert warning";
+    alertsEl.className="warning";
   } else {
     alertsEl.textContent="🔴 SOS — Send Help!";
-    alertsEl.className="status-pill alert danger";
+    alertsEl.className="alert";
   }
 });
+
+// Auto-adjust map on load
+setTimeout(()=>map.invalidateSize(),100);
 </script>
 </body>
 </html>
